examples/test/testpolicy2696.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2696
  namespace: namespace157
spec:
  podSelector:
    matchLabels:
      key47: value46
      key22: value40
      key17: value39
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key4: value16
      podSelector:
        matchLabels:
          key44: value44
          key22: value7
